.provarCaches/00D410000011HE0EAM/objects/rstkf__glfa__c.object
<CustomObject>
    <fields>
        <fullName>rstkf__glfa_propertyclass__c</fullName>
        <description>glfa_propertyclass__c</description>
        <inlineHelpText>Indicates the value of the property class belonging to this fixed asset. Values that can be chosen are ‘New’ and ‘Used’.</inlineHelpText>
        <label>Property Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
                <value>
                    <fullName>Partially Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfa_propertytype__c</fullName>
        <description>glfa_propertytype__c</description>
        <inlineHelpText>Indicates the type of property for this fixed asset. Values that can be chosen are ‘Own’ and ‘Lease’.</inlineHelpText>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Partially Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfa_prorateper1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>glfa_prorateper1__c</description>
        <inlineHelpText>When this checkbox is enabled, the depreciation value of the fixed asset is prorated for the first period.</inlineHelpText>
        <label>Prorate First Period (S/L)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_retireamt__c</fullName>
        <description>glfa_retireamt__c</description>
        <inlineHelpText>This is the value of the asset at the time when it was retired.</inlineHelpText>
        <label>Retirement Value</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Retirement</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_retiredisp__c</fullName>
        <description>glfa_retiredisp__c</description>
        <inlineHelpText>Indicates the nature of retirement of the fixed asset. Values are Scrapped, Sold and Inventoried. Status of the fixed asset must be set to ‘Retired’ prior to selecting this value.</inlineHelpText>
        <label>Retirement Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rstkf__glfa_status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scrapped</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Inventoried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfa_revaluationval__c</fullName>
        <description>glfa_revaluationval__c</description>
        <inlineHelpText>This is the carrying / market value of the Fixed Asset defined / set during the last asset revaluation process.</inlineHelpText>
        <label>Revaluation Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_scheddepevents__c</fullName>
        <formula>rstkf__glfa_lifemonths__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the total number of depreciation transactions that are expected to be applied over the full life of the Fixed Asset.</inlineHelpText>
        <label>Scheduled Number of Depreciation Events</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_serialno__c</fullName>
        <description>glfa_serialno__c</description>
        <inlineHelpText>Value of a number(s) or string of characters that is assigned to the fixed asset for its unique identification.</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_sf_asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce Asset</description>
        <inlineHelpText>Salesforce Asset</inlineHelpText>
        <label>Salesforce Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_slannualpct__c</fullName>
        <formula>1 / (rstkf__glfa_lifemonths__c / 12) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the straight line depreciation rate calculated by dividing the Depreciable Amount by the total useful life of the Fixed Asset.</inlineHelpText>
        <label>Straight Line Annual Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfa_sowarr__c</description>
        <inlineHelpText>This tracks the warranty and installation details associated with this fixed asset. It has a lookup to Shipped Item Warranty.</inlineHelpText>
        <label>Associated Shipped Item Warranty</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_status__c</fullName>
        <description>glfa_status__c</description>
        <inlineHelpText>It represents the current status of the fixed asset. Values are New, Inactive, CIP, Active, Depreciated and Retired. If left empty, value is set to ‘New’.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Depreciated</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glfa_sumlifeyears__c</fullName>
        <formula>rstkf__glfa_lifeyears__c * (rstkf__glfa_lifeyears__c + 1) / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the denominator used in depreciation calculation for the sum of the years depreciation method. It is only applicable to the sum of the years depreciation method.</inlineHelpText>
        <label>Sum of the Asset Life Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_sydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfa_sydiv__c</description>
        <inlineHelpText>Division under which this fixed asset exists. Company under which this division exists and the company selected for this fixed asset must be equal. It has a lookup to Division Master.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_syorg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfa_syorg__c</description>
        <inlineHelpText>Organization department for this fixed asset. It has a lookup to organizational department. Division must be selected prior to selecting department.</inlineHelpText>
        <label>Organizational Department</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>rstk__syorg__c.rstk__syorg_div__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstkf__glfa_sydiv__c</valueField>
            </filterItems>
            <infoMessage>Requires selection of a Division</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>rstk__syorg__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_syusersched__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>glfa_syusersched</description>
        <inlineHelpText>Required when the depreciation method in the depreciation rule set is equal to ‘User Defined’. It has a lookup to the User Defined Depreciation Schedule.</inlineHelpText>
        <label>User Defined Depreciation Schedule</label>
        <referenceTo>rstkf__syusersched__c</referenceTo>
        <relationshipLabel>Fixed Assets</relationshipLabel>
        <relationshipName>glfas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_tagno__c</fullName>
        <inlineHelpText>A unique ID or serial number attached to an asset which helps in identification of the fixed asset through its useful life.</inlineHelpText>
        <label>Asset Tag Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_thrudatelastdepr__c</fullName>
        <description>glfa_thrudatelastdepr__c</description>
        <inlineHelpText>This is the through date associated with the last depreciation transaction that was generated.</inlineHelpText>
        <label>Last Depreciated Through Date</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_thrudate__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Depreciation,Take On Summary Depreciation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_totadjdown__c</fullName>
        <description>glfa_totadjdown__c</description>
        <inlineHelpText>This is the total value of all downward adjustments made to the asset to date.</inlineHelpText>
        <label>Total Adjustments Down</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Adjustment-Down</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_totadjup__c</fullName>
        <description>glfa_totadjup__c</description>
        <inlineHelpText>This is the total value of all upward adjustments made to the asset to date.</inlineHelpText>
        <label>Total Adjustments Up</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Adjustment-Up</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_totalpartialdisposalamt__c</fullName>
        <description>glfa_totalpartialdisposalamt__c</description>
        <label>Total Partial Disposals</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Partial Disposal</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_totdepr__c</fullName>
        <description>glfa_totdepr__c</description>
        <inlineHelpText>This is the total value of the accumulated depreciation to date.</inlineHelpText>
        <label>Total Accumulated Depreciation</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Depreciation, Depreciation Clearing, Take On Summary Depreciation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_totpostadjdown__c</fullName>
        <description>glfa_totpostadjdown__c</description>
        <inlineHelpText>This is the total value of all downward adjustments made to the asset since the asset was last revalued.</inlineHelpText>
        <label>Total Post Revaluation Adjustments Down</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Post Revaluation Adjustment-Down</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_totpostadjup__c</fullName>
        <description>glfa_totpostadjup__c</description>
        <inlineHelpText>This is the total value of all upward adjustments made to the asset since the asset was last revalued.</inlineHelpText>
        <label>Total Post Revaluation Adjustments Up</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Post Revaluation Adjustment-Up</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_posted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glfa_totpostrevalutionpartialdisposal__c</fullName>
        <description>glfa_totpostrevalutionpartialdisposal__c</description>
        <label>Total Post Revaluation Partial Disposal</label>
        <summarizedField>rstkf__glfatxn__c.rstkf__glfatxn_amount__c</summarizedField>
        <summaryFilterItems>
            <field>rstkf__glfatxn__c.rstkf__glfatxn_txntype__c</field>
            <operation>equals</operation>
            <value>Post Revaluation Partial Disposal</value>
        </summaryFilterItems>
        <summaryForeignKey>rstkf__glfatxn__c.rstkf__glfatxn_glfa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Fixed Asset</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>rstkf__glfa_tagno__c</columns>
        <columns>rstkf__glfa_desc__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstkf__glfa_sydiv__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Fixed_Assets</fullName>
        <columns>rstkf__glfa_glfaclass__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__glfa_desc__c</columns>
        <columns>rstkf__glfa_assetno__c</columns>
        <columns>rstkf__glfa_status__c</columns>
        <columns>rstkf__glfa_deprmethod__c</columns>
        <columns>rstkf__glfa_lifemonths__c</columns>
        <columns>rstkf__glfa_totdepr__c</columns>
        <columns>rstkf__glfa_acquisitoinamt__c</columns>
        <columns>rstkf__glfa_bookvalue__c</columns>
        <columns>rstkf__glfa_estlifeend__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfa_sydiv__c</field>
            <operation>contains</operation>
            <value>mountain</value>
        </filters>
        <label>Fixed Assets</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Fixed_Assets_Active_or_Depreciable</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfa_bookvalue__c</columns>
        <columns>rstkf__glfa_status__c</columns>
        <columns>rstkf__glfa_sydiv__c</columns>
        <columns>rstkf__glfa_assetno__c</columns>
        <columns>rstkf__glfa_glfaclass__c</columns>
        <columns>rstkf__glfa_location__c</columns>
        <columns>rstkf__glfa_deprmethod__c</columns>
        <columns>rstkf__glfa_additionamt__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfa_status__c</field>
            <operation>equals</operation>
            <value>Inactive,Active</value>
        </filters>
        <label>Fixed Assets - Active or Depreciable</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Fixed_Assets_New</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfa_sydiv__c</columns>
        <columns>rstkf__glfa_assetno__c</columns>
        <columns>rstkf__glfa_desc__c</columns>
        <columns>rstkf__glfa_glfaclass__c</columns>
        <columns>rstkf__glfa_status__c</columns>
        <columns>rstkf__glfa_glcmp__c</columns>
        <columns>rstkf__glfa_deprmethod__c</columns>
        <columns>rstkf__glfa_additionamt__c</columns>
        <columns>rstkf__glfa_totdepr__c</columns>
        <columns>rstkf__glfa_bookvalue__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfa_status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Fixed Assets - New</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Fixed_Assets_Retired</fullName>
        <columns>rstkf__glfa_sydiv__c</columns>
        <columns>rstkf__glfa_assetno__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__glfa_status__c</columns>
        <columns>rstkf__glfa_location__c</columns>
        <columns>rstkf__glfa_lifeyears__c</columns>
        <columns>rstkf__glfa_deprmethod__c</columns>
        <columns>rstkf__glfa_additionamt__c</columns>
        <columns>rstkf__glfa_totdepr__c</columns>
        <columns>rstkf__glfa_bookvalue__c</columns>
        <columns>rstkf__glfa_adjvallessresdep__c</columns>
        <columns>rstkf__glfa_thrudatelastdepr__c</columns>
        <columns>rstkf__glfa_serialno__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glfa_status__c</field>
            <operation>equals</operation>
            <value>Retired</value>
        </filters>
        <label>Fixed Assets - Retired</label>
    </listViews>
    <listViews>
        <fullName>rstkf__Fixed_Assetsjsf</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfa_glcmp__c</columns>
        <columns>rstkf__glfa_assetno__c</columns>
        <columns>rstkf__glfa_bookvalue__c</columns>
        <columns>rstkf__glfa_status__c</columns>
        <columns>rstkf__glfa_acquisitoinamt__c</columns>
        <columns>rstkf__glfa_deprmethod__c</columns>
        <columns>rstkf__glfa_glfaclass__c</columns>
        <columns>rstkf__glfa_datepurch__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Fixed Assets - jsf</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__Disposition_must_be_Retirement</fullName>
        <active>false</active>
        <description>Disposition cannot be saved without Asset status equal to Retired</description>
        <errorConditionFormula>NOT(TEXT(rstkf__glfa_status__c) =&apos;Retired&apos;)</errorConditionFormula>
        <errorDisplayField>rstkf__glfa_retiredisp__c</errorDisplayField>
        <errorMessage>Asset status must equal &quot;Retired&quot; to save a retirement disposition value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__Retired_requires_Disposition</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( rstkf__glfa_status__c , &apos;Retired&apos;) &amp;&amp;  ISPICKVAL( rstkf__glfa_retiredisp__c ,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>rstkf__glfa_status__c</errorDisplayField>
        <errorMessage>Please choose a Retirement Disposition type</errorMessage>
    </validationRules>
</CustomObject>